# Project-Cultivate

./: Application.py  Exploration.ipynb  Navigator.py  Notebook.py  README.md  Testing MLR.ipynb  pyproject.toml
